@@ -526,6 +526,8 @@ x - 8.6658330059232182300986473411838935307*x^5 + 21.66516806678406090668397
 -41471.999999999999999999999999999999999
 98106527293.111533926136928277796284706
 98106527293.111533926136928277796284706
+45515516542954982422.225456145489798060
+2.0716622535417196510500376518804560198 E39
 -1
 [0]
 347813742467679407541/38941611811810745401
@@ -738,4 +740,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
 0
 [-0.52751724240790530394437835702346995884*I, -0.090507650025885335533571758
 708283389896*I]
-Total time spent: 628
+Total time spent: 585
