@@ -250,6 +250,8 @@ for (i = 1, #v,
   print(f(w2));
 )
 }
+elleisnum([1,I/2^30],2)
+elleisnum([1,I/2^30],4)
 
 \\ #1257
 ellrootno(ellinit([0,-1,1,217,-282]))
