@@ -16,6 +16,7 @@ AP    5- alginit(nf, hasse inv.) sometimes wrong degree or stack overflow
      12- idealredmodpower(nf,x,...) incorrect when x a t_INT or t_FRAC
      13- znchargauss(,,a != 1): wrong value (missing \bar{chi}(a))
      14- factorpadic(): wrong results when p-adic accuracy too low
+     15- elleisnum([1,I/2^100],4) -> exponent overflow
 
   Changed
       1- polcoeff is deprecated and renamed polcoef: it now only applies
